accor/terraform/waf/alb.tf
module "alb" {
  source  = "terraform-aws-modules/alb/aws"
  version = "9.11.0"

  name = "${var.name}-alb"

  load_balancer_type = "application"

  vpc_id  = var.vpc_id
  subnets = data.terraform_remote_state.network.outputs.public_subnets

  security_groups = [aws_security_group.alb.id]

  enable_deletion_protection = true

  listeners = {
    http = {
      port     = 80
      protocol = "HTTP"

      default_action = {
        type = "forward"
        target_group_key = "app"
      }
    }
  }

  target_groups = {
    app = {
      name_prefix = "app-"

      backend_protocol = "HTTP"
      backend_port     = 80
      target_type      = "ip"

      health_check = {
        path = "/health"
      }
    }
  }
}
resource "aws_security_group" "alb" {
  name   = "${var.name}-alb-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
